Final-Project/akka-io/japi/akka-core/2.10/akka/util/ByteString.md
---
description: ''
knowledge_type: official_documentation
scraped_at: '2026-04-06T13:41:42Z'
section: japi
site: akka-io
source_url: https://doc.akka.io/japi/akka-core/2.10/akka/util/ByteString.Companion$.html
title: ByteString.Companion$
---

# ByteString.Companion$

## Content

Package [akka.util](package-summary.html)
## Class ByteString.Companion$

- java.lang.Object
- - akka.util.ByteString.Companion$

- Enclosing class:
[ByteString](ByteString.html "class in akka.util")

---

```
public static class ByteString.Companion$
extends java.lang.Object
```

- - ### Field Summary
	
	
	
	Fields 
	| Modifier and Type | Field | Description |
	| `static [ByteString.Companion$](ByteString.Companion$.html "class in akka.util")` | `[MODULE$](#MODULE$)` | Static reference to the singleton instance of this Scala object. |

	- ### Constructor Summary
	
	
	
	Constructors 
	| Constructor | Description |
	| `[Companion$](#%3Cinit%3E())()` |  |

	- ### Method Summary
	
	
	
	All Methods [Instance Methods](javascript:show(2);) [Concrete Methods](javascript:show(8);) 
	| Modifier and Type | Method | Description |
	| `[ByteString.Companion](ByteString.Companion.html "interface in akka.util")` | `[apply](#apply(byte))​(byte from)` |  |
	
	
		- ### Methods inherited from class java.lang.Object
		
		
		`clone, equals, finalize, getClass, hashCode, notify, notifyAll, toString, wait, wait, wait`

- - ### Field Detail
	
	
	
		- #### MODULE$
		
		
		
		```
		public static final [ByteString.Companion$](ByteString.Companion$.html "class in akka.util") MODULE$
		```
		
		Static reference to the singleton instance of this Scala object.

	- ### Constructor Detail
	
	
	
		- #### Companion$
		
		
		
		```
		public Companion$()
		```

	- ### Method Detail
	
	
	
		- #### apply
		
		
		
		```
		public [ByteString.Companion](ByteString.Companion.html "interface in akka.util") apply​(byte from)
		```

## Related Pages (Internal Links)

- https://doc.akka.io/japi/akka-core/2.10/akka/util/ByteString.Companion$.html
- https://doc.akka.io/japi/akka-core/2.10/akka/util/ByteString.Companion.html
- https://doc.akka.io/japi/akka-core/2.10/akka/util/ByteString.html
- https://doc.akka.io/japi/akka-core/2.10/akka/util/package-summary.html

---
*Source: [https://doc.akka.io/japi/akka-core/2.10/akka/util/ByteString.Companion$.html](https://doc.akka.io/japi/akka-core/2.10/akka/util/ByteString.Companion$.html)*